; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_folder_split_path.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_folder_split_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (i64*, i32)* @folder_split_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @folder_split_path(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  store i64* %0, i64** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64*, i64** %4, align 8
  %7 = icmp ne i64* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %2
  %9 = load i64*, i64** %4, align 8
  store i64* %9, i64** %3, align 8
  br label %22

10:                                               ; preds = %2
  %11 = load i64*, i64** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i64* @strchrW(i64* %11, i32 %12)
  store i64* %13, i64** %4, align 8
  %14 = load i64*, i64** %4, align 8
  %15 = icmp ne i64* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %10
  %17 = load i64*, i64** %4, align 8
  store i64* %17, i64** %3, align 8
  br label %22

18:                                               ; preds = %10
  %19 = load i64*, i64** %4, align 8
  store i64 0, i64* %19, align 8
  %20 = load i64*, i64** %4, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 1
  store i64* %21, i64** %3, align 8
  br label %22

22:                                               ; preds = %18, %16, %8
  %23 = load i64*, i64** %3, align 8
  ret i64* %23
}

declare dso_local i64* @strchrW(i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
